Adjusted to /m/ prefix, some config, norwegian language

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html itemscope itemtype="http://schema.org/Product" prefix="og: http://ogp.me/ns#" xmlns="http://www.w3.org/1999/html">
   <head>
-    <!--#include virtual="head.html" -->
+    <!--#include virtual="/m/head.html" -->
     <meta charset="utf-8">
     <meta http-equiv="content-type" content="text/html;charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--#include virtual="base.html" -->
+    <!--#include virtual="/m/base.html" -->
 
     <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
     <link rel="stylesheet" href="css/all.css">
@@ -84,9 +84,9 @@
                         + "font-size: medium;"
                         + "font-weight: 400;"
                         + "transform: translate(-50%, -50%)'>"
-                        + "Uh oh! We couldn't fully download everything we needed :("
+                        + "Oj! Det skjedde en feil under innlasting av siden."
                         + "<br/> "
-                        + "We will try again shortly. In the mean time, check for problems with your Internet connection!"
+                        + "Vi prøver igjen snart. I mellomtiden anbefaler vi at du sjekker om det kan være problemer med internett-tilkoblingen."
                         + "<br/><br/> "
                         + "<div id='moreInfo' style='"
                         + "display: none;'>" + "Missing " + fileRef
@@ -99,7 +99,7 @@
                         + "<a id ='reloadLink' style='"
                         + "text-decoration: underline;"
                         + "font-size:small;"
-                        + "'>reload now</a>"
+                        + "'>Last inn på nytt</a>"
                         + "</div>";
 
                     var reloadLink = document.getElementById('reloadLink');
@@ -141,20 +141,20 @@
         window.addEventListener(
             'error', loadErrHandler, true /* capture phase type of listener */);
     </script>
-    <script><!--#include virtual="/config.js" --></script><!-- adapt to your needs, i.e. set hosts and bosh path -->
-    <!--#include virtual="connection_optimization/connection_optimization.html" -->
+    <script><!--#include virtual="/m/config.js" --></script><!-- adapt to your needs, i.e. set hosts and bosh path -->
+    <!--#include virtual="/m/connection_optimization/connection_optimization.html" -->
     <script src="libs/do_external_connect.min.js?v=1"></script>
-    <script><!--#include virtual="/interface_config.js" --></script>
-    <script><!--#include virtual="/logging_config.js" --></script>
+    <script><!--#include virtual="/m/interface_config.js" --></script>
+    <script><!--#include virtual="/m/logging_config.js" --></script>
     <script src="libs/lib-jitsi-meet.min.js?v=139"></script>
     <script src="libs/app.bundle.min.js?v=139"></script>
-    <!--#include virtual="title.html" -->
-    <!--#include virtual="plugin.head.html" -->
-    <!--#include virtual="static/welcomePageAdditionalContent.html" -->
-    <!--#include virtual="static/settingsToolbarAdditionalContent.html" -->
+    <!--#include virtual="/m/title.html" -->
+    <!--#include virtual="/m/plugin.head.html" -->
+    <!--#include virtual="/m/static/welcomePageAdditionalContent.html" -->
+    <!--#include virtual="/m/static/settingsToolbarAdditionalContent.html" -->
   </head>
   <body>
-    <!--#include virtual="body.html" -->
+    <!--#include virtual="/m/body.html" -->
     <div id="react"></div>
   </body>
 </html>
