--- a/static/close2.html
+++ b/static/close2.html
@@ -1,8 +1,8 @@
 <html>
 <head>
     <link rel="stylesheet" href="../css/all.css"/>
-    <!--#include virtual="/title.html" -->
-    <script><!--#include virtual="/interface_config.js" --></script>
+    <!--#include virtual="/m/title.html" -->
+    <script><!--#include virtual="/m/interface_config.js" --></script>
     <script src="close.js"></script>
 </head>
 <body>
