--- a/static/oauth.html
+++ b/static/oauth.html
@@ -3,8 +3,8 @@
     <meta charset="utf-8">
     <meta http-equiv="content-type" content="text/html;charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--#include virtual="/base.html" -->
-    <!--#include virtual="/title.html" -->
+    <!--#include virtual="/m/base.html" -->
+    <!--#include virtual="/m/title.html" -->
     <script>
         (function() {
             var windowName = window.name;
