--- a/static/deviceSelectionPopup.html
+++ b/static/deviceSelectionPopup.html
@@ -7,8 +7,8 @@
 
     <link rel="stylesheet" href="css/all.css">
 
-    <!--#include virtual="/title.html" -->
-    <script><!--#include virtual="/interface_config.js" --></script>
+    <!--#include virtual="/m/title.html" -->
+    <script><!--#include virtual="/m/interface_config.js" --></script>
     <script>
         window.config = {};
     </script>
