--- a/static/recommendedBrowsers.html
+++ b/static/recommendedBrowsers.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <link rel="stylesheet" href="../css/all.css"/>
-    <!--#include virtual="/title.html" -->
+    <!--#include virtual="/m/title.html" -->
 </head>
 <body>
     <div class = 'unsupported-desktop-browser'>
